--- a/Feel/wwwroot/index.html
+++ b/Feel/wwwroot/index.html
@@ -1,3 +1,4 @@
+<!-- wwwroot/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,7 +12,7 @@
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <!--Css-->
     <link rel="stylesheet" href="css/style.css?v=1" />
-    
+
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
@@ -23,11 +24,67 @@
         <!--Qui ci va il loading-->
     </div>
 
-    <!--Javascript-->
+    <!--Javascript dell’app Blazor-->
     <script src="js/app.js?v=1"></script>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <!--Bootstrap JS-->
     <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Logica per aggiornamenti PWA -->
+    <script>
+        (function () {
+            if (!('serviceWorker' in navigator)) return;
+
+            window.addEventListener('load', async () => {
+                try {
+                    const reg = await navigator.serviceWorker.register('service-worker.js');
+
+                    // 1) Cold start
+                    if (reg.waiting) {
+                        return redirectToWaiting();
+                    }
+
+                    // 2) In-session update
+                    reg.addEventListener('updatefound', () => {
+                        const w = reg.installing;
+                        w.addEventListener('statechange', () => {
+                            if (w.state === 'installed' && navigator.serviceWorker.controller) {
+                                redirectToWaiting();
+                            }
+                        });
+                    });
+                } catch (e) {
+                    console.error('SW registration failed:', e);
+                }
+            });
+
+            function redirectToWaiting() {
+                // evita il redirect se sei già su /waiting
+                if (window.location.pathname !== '/waiting') {
+                    window.location.href = '/waiting';
+                }
+            }
+        })();
+    </script>
+
+
+    <!-- Funzione per skipWaiting e reload, usata in Waiting.razor -->
+    <script>
+        window.skipAndReload = async () => {
+            const reg = await navigator.serviceWorker.getRegistration();
+            if (reg?.waiting) {
+                // 1) Attacca il listener PRIMA
+                navigator.serviceWorker.addEventListener('controllerchange', () => {
+                    window.location.href = '/';
+                });
+                // 2) Manda lo skip
+                reg.waiting.postMessage({ type: 'SKIP_WAITING' });
+            } else {
+                window.location.reload();
+            }
+        };
+    </script>
+
 </body>
 
 </html>
