--- a/Feel/wwwroot/index.html
+++ b/Feel/wwwroot/index.html
@@ -21,7 +21,9 @@
 
 <body>
     <div id="app">
-        <!--Qui ci va il loading-->
+        <div class="bg-dark d-flex justify-content-center align-items-center" style="width: 100vw; height: 100vh; transition: all 300ms ease-in-out;">
+        <span class="loader"></span>
+        </div>
     </div>
 
     <!--Javascript dell’app Blazor-->
