--- a/Feel/wwwroot/index.html
+++ b/Feel/wwwroot/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Feel</title>
+    <title>JK - Feel</title>
     <base href="/" />
     <!--Bootstrap-->
     <link rel="stylesheet" href="lib/bootstrap-icons">
@@ -13,7 +13,7 @@
     <!--Css-->
     <link rel="stylesheet" href="css/style.css?v=1" />
 
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="/css/images/Loghi/192.png" />
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
