--- a/Feel/wwwroot/index.html
+++ b/Feel/wwwroot/index.html
@@ -13,10 +13,10 @@
     <!--Css-->
     <link rel="stylesheet" href="css/style.css?v=1" />
 
-    <link rel="icon" type="image/png" href="/css/images/Loghi/192.png" />
+    <link rel="icon" type="image/png" href="css/images/Loghi/192.png" />
     <link href="manifest.webmanifest" rel="manifest" />
-    <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="css/images/Loghi/512.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="css/images/Loghi/192.png" />
 </head>
 
 <body>
